Skip to content
New issue

Have a question about this project? Sign up for a free GitHub account to open an issue and contact its maintainers and the community.

By clicking “Sign up for GitHub”, you agree to our terms of service and privacy statement. We’ll occasionally send you account related emails.

Already on GitHub? Sign in to your account

[SR-4836] Changes to withCString regress diagnostic quality #47413

Closed
dabrahams opened this issue May 9, 2017 · 3 comments
Closed

[SR-4836] Changes to withCString regress diagnostic quality #47413

dabrahams opened this issue May 9, 2017 · 3 comments
Assignees
Labels
bug A deviation from expected or documented behavior. Also: expected but undesirable behavior. compiler The Swift compiler in itself diagnostics QoI Bug: Diagnostics Quality of Implementation

Comments

@dabrahams
Copy link
Collaborator

Previous ID SR-4836
Radar rdar://problem/32134719
Original Reporter @dabrahams
Type Bug
Status Resolved
Resolution Done
Additional Detail from JIRA
Votes 0
Component/s Compiler
Labels Bug, DiagnosticsQoI
Assignee @xedin
Priority Medium

md5: c4af4058819c7b51666afc257c7d1965

Issue Description:

#9412 regresses the error in test/Constraints/closures.swift line 369 from “cannot assign value of type 'Int8' to type 'UInt8'” to “cannot subscript a value of incorrect or ambiguous type.”

@dabrahams
Copy link
Collaborator Author

@swift-ci create

@dabrahams
Copy link
Collaborator Author

In fact, this message keeps bouncing back and forth as I make changes to the standard library.

@xedin
Copy link
Member

xedin commented Jun 21, 2017

Improved by #10099

@swift-ci swift-ci transferred this issue from apple/swift-issues Apr 25, 2022
This issue was closed.
Sign up for free to join this conversation on GitHub. Already have an account? Sign in to comment
Labels
bug A deviation from expected or documented behavior. Also: expected but undesirable behavior. compiler The Swift compiler in itself diagnostics QoI Bug: Diagnostics Quality of Implementation
Projects
None yet
Development

No branches or pull requests

2 participants