[QoI] Improve diagnostics for single argument calls with trailing closures

Calls involving single trailing closure arguments require special
handling because we don't have as much contextual information
about function/argument types as in with regular calls, which means
that diagnosing such situations only by `visitApplyExpr`
yields subpar results.

Resolves:
  - SR-4836
  - SR-5199
  - rdar://problem/30106822
  - rdar://problem/32433193
  - rdar://problem/32490355
  - rdar://problem/28004686
  - rdar://problem/28012273
  - rdar://problem/32191368